# Ultimate-warrios

./: .cursorrules  .env.production.example  .gitignore  Caddyfile  RiftArena_Main.slnx  docker-compose.production.yml  docker-compose.yml  nginx.conf
.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Assets/Animations/: Archer_Controller.controller  Boomer_Controller.controller  Ferro_Controller.controller  Kai_Controller.controller  Nova_Controller.controller  Tinker_Controller.controller  Whisper_Controller.controller
Assets/Editor/: AnimationSetup.cs  HeroModelSetup.cs  MapCreator.cs  PortraitSetup.cs  ProjectSetupWizard.cs  UIToolkitSetup.cs  WebGLBuildHelper.cs
Assets/Scenes/: BootstrapScene.unity
Assets/Scripts/: TacticalDuelist.asmdef
Assets/Settings/: Mobile_RPAsset.asset  (+2 more)
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
contracts/: Anchor.toml  authority.json  package.json
contracts/programs/tactical-duelist/: Cargo.toml
contracts/programs/tactical-duelist/src/: lib.rs
docs/: AI-ART-PIPELINE.md  ARCHITECTURE.md  ART-ASSET-LIST.md  ART-DIRECTION.md  ASSET-LIST.md  CODING-CONVENTIONS.md  COLOSSEUM-SPRINT.md  CURSOR-GUIDE.md  DEPLOY.md  DESIGN_SYSTEM.md  GAME-DESIGN.md  HEROES.md  LORE.md  MATCH-SCENE-SETUP.md  MVP-SCOPE.md  PRD-TacticalDuelist-RU-2026-02-28.md  ROADMAP.md  TASKS.md  TECHNICAL-SPEC.md  UI-DESIGN-PROMPT.md  UI-UX-SCREENS.md
server/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
(+198 files in other folders)
