[package]
name = "tactical-duelist"
version = "0.1.0"
description = "Tactical Duelist — Staked Match Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tactical_duelist"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
